--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -92,6 +92,10 @@
                                 <ng-template monaGridDetailTemplate let-dataItem>
                                     <span style="padding:1rem;">{{dataItem|json}}</span>
                                 </ng-template>
+                                <ng-template monaGridNoDataTemplate>
+                                    <span style="color: #ffcc75; font-weight: bold; height: 100%;
+                                                 display: flex; align-items: center; justify-content: center;">No data found.</span>
+                                </ng-template>
                                 <ng-container monaGridContextMenu>
                                     <mona-menu-item text="Print" (menuClick)="print($event)"></mona-menu-item>
                                 </ng-container>
