--- a/projects/mona-ui/src/lib/grid/components/grid/grid.component.html
+++ b/projects/mona-ui/src/lib/grid/components/grid/grid.component.html
@@ -127,6 +127,8 @@
             <ng-container [ngTemplateOutlet]="emptyGridTemplate"></ng-container>
         }
     }
+} @placeholder {
+    <mona-placeholder text="Loading..."></mona-placeholder>
 }
 
 <ng-template #emptyGridTemplate>
