--- a/projects/mona-ui/src/lib/grid/components/grid-cell/grid-cell.component.html
+++ b/projects/mona-ui/src/lib/grid/components/grid-cell/grid-cell.component.html
@@ -7,9 +7,15 @@
     } @else {
         @if (column().cellTemplate()) {
             <ng-container [ngTemplateOutlet]="column().cellTemplate()"
-                          [ngTemplateOutletContext]="{$implicit: row(), column: column()}"></ng-container>
+                          [ngTemplateOutletContext]="{$implicit: row(), column: column()}" #cellElement></ng-container>
         } @else {
-            <span class="mona-grid-cell-text">{{row().data[column().field()]}}</span>
+            <span class="mona-grid-cell-text" #cellElement>{{row().data[column().field()]}}</span>
+            @if (gridService.cellTooltipTemplate()) {
+                <mona-tooltip [target]="cellElement">
+                    <ng-container [ngTemplateOutlet]="gridService.cellTooltipTemplate()"
+                                  [ngTemplateOutletContext]="{$implicit: row().data[column().field()], field: column().field, dataItem: row().data}"></ng-container>
+                </mona-tooltip>
+            }
         }
     }
 </div>
