--- a/projects/mona-ui/src/styles/theme.scss
+++ b/projects/mona-ui/src/styles/theme.scss
@@ -1,5 +1,5 @@
-@import '@angular/cdk/overlay-prebuilt.css';
-@import 'remixicon/fonts/remixicon.css';
+@import '../../../../node_modules/@angular/cdk/overlay-prebuilt.css';
+@import '../../../../node_modules/remixicon/fonts/remixicon.css';
 
 *,
 *::before,
