fix: update packages

--- a/projects/mona-ui-tester/src/styles.scss
+++ b/projects/mona-ui-tester/src/styles.scss
@@ -2,7 +2,7 @@
 @import url("https://use.typekit.net/zop2fdb.css");
 //@import "projects/mona-ui/styles/kafka";
 //@import "projects/mona-ui/styles/lumine";
-@import "../../mona-ui/src/styles/mona";
+@import "projects/mona-ui/src/styles/mona";
 //@import "projects/mona-ui/styles/base-light";
 //@import "projects/mona-ui/styles/noelle-light";
 
