--- a/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.scss
+++ b/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.scss
@@ -9,11 +9,14 @@ table {
 
     & tr {
         display: inline-flex;
-        &:nth-child(even) {
+
+        &.mona-grid-row-even,
+        &.mona-grid-detail-row-even {
             background-color: var(--mona-background-dark);
         }
 
-        &:nth-child(odd) {
+        &.mona-grid-row-odd,
+        &.mona-grid-detail-row-odd {
             background-color: var(--mona-background);
         }
 
